Add 1 month ruel,,  (newbee) and updated read.me

--- a/docker/config/ssl.conf
+++ b/docker/config/ssl.conf
@@ -8,6 +8,11 @@ ssl_stapling_verify on;
 ssl_dhparam /etc/letsencrypt/dhparam.pem;
 ssl_ecdh_curve secp384r1;
 
-add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+#1 Year
+#add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+
+#1 Month
+add_header Strict-Transport-Security "max-age=2629800; includeSubdomains";
+
 add_header X-Frame-Options DENY;
 add_header X-Content-Type-Options nosniff;
